--- a/volcano_impact_on_climate_precip.ipynb
+++ b/volcano_impact_on_climate_precip.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Volcanic Eruption Impact on Climate: Ts\n",
+    "# Volcanic Eruption Impact on Climate: Precipitation\n",
     "* Wenchang Yang (wenchang@princeton.edu)\n",
     "* Department of Geosciences, Princeton University"
    ]
