--- a/control_runs.ipynb
+++ b/control_runs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Control_1860 and Volcanic Impact\n",
+    "# Global Mean Surface Temperature from Control Runs\n",
     "* Wenchang Yang (wenchang@princeton.edu)\n",
     "* Department of Geosciences, Princeton University"
    ]
